Modificado Organismo Interno

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
 		    <li><%= link_to 'Usuarios',usuarios_path %></li>
 		    <li><%= link_to 'Roles',roles_path %></li>
 		    <li><%= link_to 'Cargos',cargos_path %></li>
-		    <li><%= link_to 'Entes', entes_path %></li>
+		    <!--<li><%= link_to 'Entes', entes_path %></li>-->
 		    <li><%= link_to 'Paises', paises_path %></li>
 		    <li><%= link_to 'Ciudades', ciudades_path %></li>
 		    <li><%= link_to 'Unidades de Tiempo', unidades_tiempos_path %></li>
@@ -84,7 +84,7 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Personas/Organismos</li>
-              <li><%= link_to 'Personas Fisicas', personas_fisicas_path %></li>
+              <li><%= link_to 'Personas Físicas', personas_fisicas_path %></li>
               <li><%= link_to 'Personas Juridicas', personas_juridicas_path %></li>
               <li><%= link_to 'Organismos Internos', organismos_internos_path %></li>
               <li class="nav-header">Procesos</li>
