--- a/app/views/personas_fisicas/index.html.erb
+++ b/app/views/personas_fisicas/index.html.erb
@@ -3,10 +3,7 @@
     <h1>Personas F&iacute;sicas <small>Disponibles</small></h1>
   </div>
 
-<!--  <div class="well">
-    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_persona_fisica_path, :class => 'btn btn-primary' %>
-    -->
-      <%= form_tag controller_name, :class => "well form-inline", :method => :get do %>
+  <%= form_tag controller_name, :class => "well form-inline", :method => :get do %>
 
     <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_persona_fisica_path, :class => 'btn btn-primary' %>
     <%= link_to icon_tag('Todos', :class => 'icon-eye-open icon-white'), persona_fisica_path, :class => 'btn btn-primary' %>
@@ -14,7 +11,7 @@
     <%= label_tag 'Buscar:' %>
     <%= text_field_tag 'valor', params[:valor], :style => "width:120px;" %>
     <%= label_tag 'Tipo' %>
-    <%= select_tag :tipo_busqueda, options_for_select(Usuario::TIPO_BUSQUEDA.map{|c| [c,c]},params[:tipo_busqueda]) %>
+    <%= select_tag :tipo_busqueda, options_for_select(PersonaFisica::TIPO_BUSQUEDA.map{|c| [c,c]},params[:tipo_busqueda]) %>
     <%= submit_tag 'Buscar',  :class => 'btn btn-primary'%>
     <hr />
 
@@ -23,47 +20,47 @@
   <% end %>
 
 </form>
-<!-- </div> -->
-  <br />
 
-  <% if @personas_fisicas.present? %>
-    <table class="table table-striped table-bordered table-condensed">
+<br />
+
+<% if @personas_fisicas.present? %>
+  <table class="table table-striped table-bordered table-condensed">
+    <tr>
+      <th>Nombre</th>
+      <th>Documento</th>
+      <th>Tel&eacute;fono</th>
+      <th>Ciudad</th>
+      <th>Cargo</th>
+
+      <th></th>
+    </tr>
+    <% @personas_fisicas.each do |persona_fisica| %>
       <tr>
-        <th>Nombre</th>
-        <th>Documento</th>
-        <th>Tel&eacute;fono</th>
-        <th>Ciudad</th>
-        <th>Cargo</th>
+        <td><%= persona_fisica.apellido_nombre %></td>
+        <td><%= persona_fisica.tipo_documento.nombre + " " + persona_fisica.documento %></td>
+        <td><%= persona_fisica.telefono %></td>
+        <td><%= persona_fisica.ciudad.nombre %></td>
+        <td><%= persona_fisica.cargo.nombre %></td>
+        <td>
 
-        <th></th>
+          <div class="btn-group">              
+            <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
+            <ul id="menu1" class="dropdown-menu">
+              <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_persona_fisica_path(persona_fisica) %></li>
+              <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), persona_fisica, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+
+            </ul>              
+          </div>
+        </td>
       </tr>
-      <% @personas_fisicas.each do |persona_fisica| %>
-        <tr>
-          <td><%= persona_fisica.apellido_nombre %></td>
-          <td><%= persona_fisica.tipo_documento.nombre + " " + persona_fisica.documento %></td>
-          <td><%= persona_fisica.telefono %></td>
-          <td><%= persona_fisica.ciudad.nombre %></td>
-          <td><%= persona_fisica.cargo.nombre %></td>
-          <td>
+    <% end %>
+  </table> 
+  <%= paginate @personas_fisicas %>
 
-            <div class="btn-group">              
-              <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
-              <ul id="menu1" class="dropdown-menu">
-                <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_persona_fisica_path(persona_fisica) %></li>
-                <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), persona_fisica, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
-
-              </ul>              
-            </div>
-          </td>
-        </tr>
-      <% end %>
-    </table> 
-    <%= paginate @personas_fisicas %>
-  
-  <% else %>
-    <p class="alert-message warning">
-      Todavía no hay personas_fisicas, <%= link_to 'agregar', new_persona_fisica_path %>.
-    </p>
-  <% end %>
+<% else %>
+  <p class="alert-message warning">
+    Todavía no hay personas_fisicas, <%= link_to 'agregar', new_persona_fisica_path %>.
+  </p>
+<% end %>
 
 </section>
