correccion index organismo

--- a/app/views/organismos_internos/index.html.erb
+++ b/app/views/organismos_internos/index.html.erb
@@ -28,8 +28,8 @@
     <tr>
       <th>Organismo</th>
       <th>Nro.Registro</th>
-      <th>Direccion</th>
-      <th>Telefono</th>
+      <th>Direcci&oacute;n</th>
+      <th>Tel&eacute;fono</th>
       <th>Ciudad</th>
       <th>&nbsp;</th>
     </tr>
