cambios en el formulario para cambiar la clave

--- a/app/views/usuarios/cambiar_clave.html.erb
+++ b/app/views/usuarios/cambiar_clave.html.erb
@@ -2,7 +2,7 @@
   <div class="page-header">
     <h1>Cambiar Clave</h1>
   </div>
-
+  
   <%= simple_form_for @usuario, :url => cambiar_clave_grabar_path, :html => { :class => 'form-horizontal' }  do |f| %>
     <fieldset>
       <%= f.error_notification %>
@@ -10,8 +10,9 @@
         <h3><%= @usuario.nombre_completo %></h3>
         <p><strong>Usuario: <%= @usuario.login %></strong></p>
       </div>
-      <%= f.input :password, :as => :password, :label => 'Contraseña' %>
-
+      
+      <%= f.input :password_actual, :as => :password, :label => 'Contraseña Actual' %>
+      <%= f.input :password, :as => :password, :label => 'Contraseña Nueva' %>
       <%= f.input :password_confirmation, :as => :password, :label =>  'Confirmar Contraseña' %>
 
       <div class="form-actions">
