se corrigen ciertos errores en los Labels

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,7 +100,7 @@
               <li><%= link_to 'SubProcesos', subprocesos_path %></li>
               <li><%= link_to 'Procedimientos', procedimientos_path %></li>
               <li class="nav-header">Expedientes</li>
-              <li><%= link_to 'Expdientes', expedientes_path %></li>
+              <li><%= link_to 'Expedientes', expedientes_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
