--- a/app/views/procedimientos/show.html.erb
+++ b/app/views/procedimientos/show.html.erb
@@ -104,3 +104,6 @@
     $('#add-tarea-modal').modal('toggle')
       }
     </script>
+
+    <%= stylesheet_link_tag 'smart_wizard' %>
+    <%= javascript_include_tag 'jquery.smartWizard-2.0' %>
