--- a/app/views/expedientes/index.html.erb
+++ b/app/views/expedientes/index.html.erb
@@ -11,26 +11,26 @@
   <% if @expedientes.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
+        <th>Numero</th>
         <th>Procedimiento</th>
         <th>Ente</th>
         <th>Usuario</th>
         <th>Descripcion</th>
-        <th>Numero</th>
-        <th>Copia</th>
+                
 
         <th></th>
       </tr>
       <% @expedientes.each do |expediente| %>
         <tr>
+          <td><%= expediente.numero %></td>          
           <td>
             <span class="label label-info"><%= expediente.estado %></span>
             <%= link_to expediente.procedimiento.nombre, expediente %>
           </td>
           <td><%= expediente.ente.nombre_completo %></td>
           <td><%= expediente.usuario_ingreso.nombre_completo %></td>
-          <td><%= expediente.descripcion %></td>          
-          <td><%= expediente.numero %></td>
-          <td><%= expediente.copia %></td>
+          <td><%= truncate(expediente.descripcion, :length => 80) %></td>          
+          
           <td>
 
             <div class="btn-group">              
