--- a/app/views/procesos/_form.html.erb
+++ b/app/views/procesos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @proceso, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for @proceso, :remote => @from_tree, :html => { :class => 'form-horizontal', :id => 'form_proceso' } do |f| %>
   <%= f.error_notification %>
 
   <%= f.input :nombre %>
@@ -7,8 +7,10 @@
   <%= f.input :cargo_id, :label => "Cargo", :collection => Cargo.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
   <%= f.input :serieproceso_id, :label => "MacroProceso", :collection => Macroproceso.all, :label_method => :codigo_nombre, :prompt => "-- Seleccione --" %>
 
-  <div class="form-actions">
-    <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
-    <%= link_to 'Cancelar', procesos_path, :class => "btn" %>
-  </div>
+  <% unless @from_tree -%>
+    <div class="form-actions">
+      <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>    
+      <%= link_to 'Cancelar', procesos_path, :class => "btn" %>        
+    </div>
+  <% end -%>
 <% end %>
