--- a/app/views/organismos_internos/index.html.erb
+++ b/app/views/organismos_internos/index.html.erb
@@ -6,7 +6,7 @@
   <%= form_tag controller_name, :class => "well form-inline", :method => :get do %>
 
     <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_organismo_interno_path, :class => 'btn btn-primary' %>
-    <%= link_to icon_tag('Todos', :class => 'icon-eye-open icon-white'), organismo_interno_path, :class => 'btn btn-primary' %>
+    <%= link_to icon_tag('Todos', :class => 'icon-eye-open icon-white'), organismos_internos_path, :class => 'btn btn-primary' %>
     <i class="icon-th-large"></i>
     <%= label_tag 'Buscar:' %>
     <%= text_field_tag 'valor', params[:valor], :style => "width:120px;" %>
