Cambios en vista de procesos/procedimientos, nueva interfase

--- a/app/views/macroprocesos/_proceso.html.erb
+++ b/app/views/macroprocesos/_proceso.html.erb
@@ -1,4 +1,4 @@
-<td><%= proceso.nombre %></td>
+<td colspan="2"><%= proceso.nombre %></td>
 <td><%= format_date(proceso.updated_at) %></td>
 <td>
 	<div class="pull-right">
