--- a/app/views/layouts/jstree.html.erb
+++ b/app/views/layouts/jstree.html.erb
@@ -91,6 +91,8 @@
 		<%= javascript_include_tag 'jquery.jstree' %>
     <script type="text/javascript">
       $(function(){
+        $('#submit_form').live('click', function(){ $('.form_remote').submit(); });
+
         $('#main').jstree({
           'themes': {
             'theme': 'default',
