--- a/app/views/macroprocesos/_detalles.html.erb
+++ b/app/views/macroprocesos/_detalles.html.erb
@@ -31,16 +31,19 @@
 <div id="procesos">
 	<table class="table">
 		<thead>
-			<tr>
-				<th colspan="4" style="text-align:center;background-color:#ccc"><h3>Procesos<h3></th>
+			<tr style="background-color:#ccc">
+				<th colspan="3" style="text-align:center;">
+					<h3>Procesos</h3>					
+				</th>
+				<td class="add-place"><%= link_to icon_tag('Agregar', :class => 'icon-plus-sign'), new_proceso_path(:from => 'tree', :macroproceso_id => @macroproceso.id), :id => 'add-proceso', :class => 'btn pull-right', :remote => true %></td>
 			</tr>
 			<tr>
-				<th>Nombre</th>
+				<th colspan="2">Nombre</th>
 				<th>Fecha</th>
 				<th>&nbsp;</th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody id="pso-body">
 			<% for proceso in @procesos -%>
 				<tr id="pso-<%= proceso.id %>">
 					<%= render 'proceso', :proceso => proceso %>
