--- a/app/views/procedimientos/_form.html.erb
+++ b/app/views/procedimientos/_form.html.erb
@@ -1,40 +1,46 @@
-<%= simple_form_for @procedimiento, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for @procedimiento, :remote => @from_tree, :html => { :class => 'form-horizontal form_remote' } do |f| %>
   <%= f.error_notification %>
 
-  <%= f.input :serieproceso_id, :label => "SubProceso", :collection => Subproceso.all, :label_method => :codigo_nombre, :prompt => "-- Seleccione --" %>
+  <% if @from_tree %>
+    <%= f.hidden_field :serieproceso_id, :value => @subproceso_id %>
+  <% else %>
+    <%= f.input :serieproceso_id, :label => "SubProceso", :collection => Subproceso.all, :label_method => :codigo_nombre, :prompt => "-- Seleccione --" %>
+  <% end %>
   <%= f.input :nombre %>
   <%= f.input :objetivo %>
   <%= f.input :definiciones %>
   <%= f.input :elabora_fecha, :as => :string, :input_html => { :class => 'date_picker' }%>
   <%#= f.input :elabora_usuario %>
   <%= f.input :elabora_usuario, :collection =>  Usuario.all, :label_method => :nombres, :prompt => '-- Seleccione --' %>
-  <%= f.input :revisado_fecha, :as => :string, :input_html => { :class => 'date_picker' } %>
+  <%#= f.input :revisado_fecha, :as => :string, :input_html => { :class => 'date_picker' } %>
   <%#= f.input :revisado_usuario %>
-  <%= f.input :revisado_usuario, :collection =>  Usuario.all, :label_method => :nombres, :prompt => '-- Seleccione --' %>
-  <%= f.input :aprobado_fecha, :as => :string, :input_html => { :class => 'date_picker' } %>
+  <%#= f.input :revisado_usuario, :collection =>  Usuario.all, :label_method => :nombres, :prompt => '-- Seleccione --' %>
+  <%#= f.input :aprobado_fecha, :as => :string, :input_html => { :class => 'date_picker' } %>
   <%#= f.input :aprobado_usuario %>
-  <%= f.input :aprobado_usuario, :collection =>  Usuario.all, :label_method => :nombres, :prompt => '-- Seleccione --' %>
+  <%#= f.input :aprobado_usuario, :collection =>  Usuario.all, :label_method => :nombres, :prompt => '-- Seleccione --' %>
 
-  <fieldset>
-    <legend>Actividades</legend>
-    <table>
-      <thead style="margin-bottom: 20px;">
-        <tr>
-          <th>Nombre</th>
-          <th>Orden</th>
-        </tr>
+  <% unless @from_tree %>
+    <fieldset>
+      <legend>Actividades</legend>
+      <table>
+        <thead style="margin-bottom: 20px;">
+          <tr>
+            <th>Nombre</th>
+            <th>Orden</th>
+          </tr>
 
-      </thead>
-      <tbody id="actividades">
-        <%= f.fields_for :actividades do |builder| %>
-          <%= render "campos_actividad", :f => builder %>
-        <% end %>
-      </tbody>
-    </table>
-    <%= link_to_add_fields icon_tag("Agregar Actividad", :class => 'icon-plus-sign'), f, :actividades, :container => 'actividades' %>
-  </fieldset>
-  <div class="form-actions">
-    <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
-    <%= link_to 'Cancelar', procedimientos_path, :class => "btn" %>
-  </div>
+        </thead>
+        <tbody id="actividades">
+          <%= f.fields_for :actividades do |builder| %>
+            <%= render "campos_actividad", :f => builder %>
+          <% end %>
+        </tbody>
+      </table>
+      <%= link_to_add_fields icon_tag("Agregar Actividad", :class => 'icon-plus-sign'), f, :actividades, :container => 'actividades' %>
+    </fieldset>
+    <div class="form-actions">
+      <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
+      <%= link_to 'Cancelar', procedimientos_path, :class => "btn" %>
+    </div>
+  <% end %>
 <% end %>
