--- a/app/views/personas_fisicas/_form.html.erb
+++ b/app/views/personas_fisicas/_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :documento, :label => "Documento (CI)" %>
   <%= f.input :direccion, :label => "Direcci&oacute;n" %>
   <%= f.input :telefono, :label => "Tel&eacute;fono" %>
-  <%= f.input :cargo_id, :collection =>  Cargo.all, :label_method => :nombre, :prompt => '-- Seleccione --' %>
+  <%= f.input :cargo_ente_id, :collection =>  CargoEnte.all, :label_method => :nombre, :prompt => '-- Seleccione --' %>
   <%= f.input :territorio_id, :label => "Ciudad", :collection => Ciudad.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
 
   <%= f.input :tipo_documento_id, :as => :hidden, :input_html => { :value => "1" } %> <!-- 1 CIN -->
