Se modifica cargos, cargos_entes, personas fisicas y usuarios

--- a/app/views/organismos_internos/_form.html.erb
+++ b/app/views/organismos_internos/_form.html.erb
@@ -28,7 +28,7 @@
       <%= link_to_function icon_tag('Marcar Todos', :class => "icon-check icon-white"), 'markAll()', :class => 'btn btn-primary' %>
       &nbsp;
       <%= link_to_function icon_tag('Desmarcar Todos', :class => 'icon-remove icon-white'), 'unmarkAll()', :class => 'btn btn-primary'   %> 
-      <%= link_to_function icon_tag('Agregar Cargo', :class => 'icon-plus-sign icon-white'), '#', :class => 'btn btn-primary'   %> 
+      <%= link_to_function icon_tag('Agregar Cargo', :class => 'icon-plus-sign icon-white'), 'mostrarPopupCargos()', :class => 'btn btn-primary'   %> 
     </legend>    
     <% @cargos.each do |cargo| %>
     <div class="span4"><%= check_box_tag "cargo_id_#{cargo.id}", cargo.id, @cargos_actuales.include?(cargo), :name => "cargos[]" %> <%= cargo.nombre %></div>
@@ -39,4 +39,15 @@
     <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
     <%= link_to 'Cancelar', organismos_internos_path, :class => "btn" %>
   </div>
+
+  <div class="modal" id="cargo-modal" style="display: none; width: 660px; padding: 10px">
+    <a class="close" data-dismiss="modal">x</a>
+    <%= render 'form_cargo' %>
+  </div>
   <% end %>
+  <script type="text/javascript">
+  function mostrarPopupCargos(){
+    $('#cargo-modal').modal('toggle');
+    $('#search').focus();
+  }
+  </script>
