--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -35,7 +35,7 @@
           <dd><%= @usuario.documento %></dd>
 
           <dt>Organismo</dt>
-          <dd><%= @usuario.ente.nombre %></dd>
+          <dd><%#= @usuario.ente.nombre %> debe mostrarse el Cargo que desempenha en el organismo</dd>
 
           <dt>Rol</dt>
           <dd><%= @usuario.rol.nombre %></dd>
